# aaf-labs-2021

./: README.md
Chorniy_fb-95/: main.rb  rbtree.rb  readme.md  treemodules.rb
Denysiuk_fb-93_Yelskiy_fb-91/: README.md  RTree.py  RTreeTest.py  main.py  query_parser.py  query_runer.py
FB-92_Shapoval_Kazankova/: comands.py  indexes.py  main.py  ourparser.py  parser.pyproj  readme.md
Gumankov_FB92_Gavrilova_FI92/: README.md  command_parser.py  database.py  kdtree.py  main.py  node.py
Kudryashov_fb-92_Kurhanskyi_fb-92/: .gitignore  README.md  commands.py  main.py  myparser.py  tree.py
Melnyk_FI-94_Velychko_FI-94/: Main.java  MathBoolExpressionParser.java  README.md  SqlParser.java
Misnik_fi_94/: Makefile  README.md  dbase.c  dbase.h  dlist.c  dlist.h  kk.t  main.c  mydb  parse_comm.c  parse_str.c  parser.h  stacks.c  stacks.h
Papysev_(FI-93)_Osyka (FI-91)/: FINAL_.ipynb  container.py  database.py  demonstration.py  interface.py  main.py  parser.py  table.py
Pavlo_Hrydin_FI-92_Hohlov_Yaroslav_FI-91/: README.md  code.py  func.py
Peleshenko_fi-94_Lischyska_fi-93/: README.md  main.cpp
Romanchenko_fi-92_panasuk_fi-94/: .gitignore  Parser_test.py  READEME.md  parser.py  storage.py  testing block
Shovak_FB-93_Protsenko_FB-93/: README.md  db.cpp  db.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  token.cpp  token.h
abdullaieva_buriachok_fb_93/: Array.h  (+14 more)
shmorhun_fi-91_koreshkov_fi-91/: .gitignore  CMakeLists.txt  README.md
shmorhun_fi-91_koreshkov_fi-91/src/: Collection.cpp  Collection.h  DB.h  Parser.h  Request.h  Set.cpp  Set.h  UI.h  main.cpp
(+253 files in other folders)
